api: Add NsAs.HandleUplink

--- a/doc/data/api/ttn.lorawan.v3/messages.yml
+++ b/doc/data/api/ttn.lorawan.v3/messages.yml
@@ -6284,6 +6284,16 @@ MessagePayloadFormatters:
     comment: Parameter for the down_formatter, must be set together.
     type: string
     default: ""
+NsAsHandleUplinkRequest:
+  name: NsAsHandleUplinkRequest
+  fields:
+  - name: application_ups
+    rules:
+      min_items: 1
+    repeated:
+      message:
+        name: ApplicationUp
+    default: []
 NwkSKeysResponse:
   name: NwkSKeysResponse
   fields:
