--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -25,7 +25,7 @@
 
 # Security
 /pkg/auth @johanstokking @htdvisser
-/pkg/crypto @johanstokking @htdvisser
+/pkg/crypto @johanstokking @htdvisser @rvolosatovs
 
 # Shared components
 /pkg/component @johanstokking @htdvisser
