--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "scroll-into-view-if-needed": "^2.2.20",
     "ttn-lw": "file:sdk/js",
     "url-polyfill": "^1.1.5",
+    "url-template": "^2.0.8",
     "yup": "^0.26.6"
   },
   "babel": {
