--- a/config/eslintrc.yaml
+++ b/config/eslintrc.yaml
@@ -1,14 +1,23 @@
 extends:
   - ttn
   - plugin:jest/recommended
+  - plugin:import/recommended
   - prettier
   - prettier/react
 
 parser: babel-eslint
 
 plugins:
-  - jsdoc
   - prettier
+  - import
+
+settings:
+  import/ignore:
+    - node_modules
+    - sdk
+  import/resolver:
+    webpack:
+      config: './config/webpack.config.babel.js'
 
 env:
   node: true
@@ -28,6 +37,80 @@ parserOptions:
 rules:
   prettier/prettier: error
 
+  # Enforce import order
+  import/order:
+    - warn
+    - groups:
+      - builtin
+      - external
+      - internal
+      - parent
+      - sibling
+      - index
+      pathGroups:
+      - pattern: "\\@{ttn-lw,console,oauth}/constants"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/api"
+        group: internal
+        position: after
+      - pattern: "\\@ttn-lw/components/**"
+        group: internal
+        position: after
+      - pattern: "\\@ttn-lw/containers/**"
+        group: internal
+        position: after
+      - pattern: "\\@ttn-lw/lib/components/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/components/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/containers/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/lib/components/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/views/**"
+        group: internal
+        position: after
+      - pattern: "\\@ttn-lw/lib/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/lib/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/store/actions/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/store/reducers/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/store/selectors/**"
+        group: internal
+        position: after
+      - pattern: "\\@{console,oauth}/store/middleware/**"
+        group: internal
+        position: after
+      - pattern: "(\\@assets/**|\\@ttn-lw/styles/**)"
+        group: sibling
+        position: after
+      - pattern: "./*.styl"
+        group: sibling
+        position: after
+      newlines-between: always
+
+  # Prevent superfluous path traversions in import statements
+  import/no-useless-path-segments:
+    - error
+    - noUselessIndex: true
+
+  # Enforce newlines after import statements.
+  import/newline-after-import: warn
+
+  import/no-named-as-default: off
+
   jest/no-large-snapshots:
     - warn
     - maxSize: 400
@@ -46,7 +129,7 @@ rules:
   # Enforce propTypes declarations alphabetical sorting
   react/sort-prop-types: warn
   # Prevent undefined components
-  react/jsx-no-undef: error
+  react/jsx-no-undef: warn
   # Prevent vague prop types
   react/forbid-prop-types:
     - warn
@@ -56,13 +139,6 @@ rules:
         - object
       checkContextTypes: true
       checkChildContextTypes: true
-
-  jsdoc/no-undefined-types: error
-  jsdoc/check-param-names: error
-  jsdoc/check-types: error
-  jsdoc/require-param-name: error
-  jsdoc/require-param-type: error
-  jsdoc/require-hyphen-before-param-description: error
 
   # Warn on console occurrences
   no-console:
