--- a/doc/data/glossary/glossary.yml
+++ b/doc/data/glossary/glossary.yml
@@ -1,6 +1,15 @@
-Device, End Device, Node, Mote:
-  description: An IoT gadget with an embedded low power LoRaWAN communication device. See The Things Node or The Things Uno.
-  link: https://www.thethingsnetwork.org/docs/devices/
+# Glossary of terms
+
+# Formatted as:
+
+# <Term>:
+#  description: <Description>
+#  link: <Link>
+#  ref: <Ref>
+#  abbr: <Abbreviation>
+#  alt:
+#    - <Alt term 1>
+#    - <Alt term 2>
 
 Gateway:
   description: Gateways form the bridge between devices and Network Servers. Devices use low power networks like LoRaWAN to connect to the Gateway, while the Gateway uses high bandwidth networks like WiFi, Ethernet or Cellular to connect to The Things Network. // antennas that receive broadcasts from End Devices and send data back to End Devices.
@@ -13,9 +22,12 @@ Gateway EUI:
   description: A 64 bit extended unique identifier for your gateway. This is programmed by the manufactuerer and should not be changed. In cases where it is not programmed by the manufacturer, it must be programmed with a unique EUI that you own.
   link: https://www.thethingsnetwork.org/docs/lorawan/addressing.html
 
-Network, Network Server, Backend:
+Network:
   description: The Network Server is responsible for routing Internet of Things data between devices and applications.
   link: https://www.thethingsnetwork.org/docs/network/
+  alt: 
+    - Network Server
+    - Backend
 
 Application:
   description: Applications are whatever your device communicates with on the internet. This could be as simple as an IFTTT Maker Applet or a visual flow using Node-RED to custom code on some server.
@@ -29,25 +41,41 @@ LoRa:
   description: A modulation technology for long range wireless communication, based on chirp-spread spectrum technology.
   link: https://en.wikipedia.org/wiki/LoRa
 
-MAC, Media Access Control:
+End Device:
+  description: An IoT gadget with an embedded low power LoRaWAN communication device. See The Things Node or The Things Uno.
+  link: https://www.thethingsnetwork.org/docs/devices/
+  alt:
+    - Device
+    - Node
+    - Mote
+
+Media Access Control:
   description: LoRaWAN media access protocols, downloadable from the LoRa Alliance. The MAC version for your device should be specified in the product documentation as Protocol version.
   link: https://lora-alliance.org/lorawan-for-developers
+  abbr: MAC
 
-PHY, Physical Layer, (Regional Parameters):
-  description: LoRaWAN official regional specifications, downloadable from the LoRa Alliance. The PHY version for your device should be specified in the product documentation as Regional Parameter version.
+Regional Parameters:
+  description: LoRaWAN official regional specifications, downloadable from the LoRa Alliance.
   link: https://lora-alliance.org/lorawan-for-developers
+  abbr: PHY
+
+Physical Layer:
+  description: Hardware pertaining to LoRaWAN official regional specifications. The PHY version for your device should be specified in the product documentation as Regional Parameter version.
+  abbr: PHY
 
 Frequency Plan:
   description: Frequencies used in geographical areas, based on what is specified in Regional Parameters.
   link: https://lora-alliance.org/lorawan-for-developers
 
-LAN, Local area network:
+Local area network:
   description: A network that connects computers within a limited area.
   link: https://en.wikipedia.org/wiki/Local_area_network
+  abbr: LAN
 
-WAN, Wide area network:
+Wide area network:
   description: A network that connects within a wide geographical range, usually to the internet.
   link: https://en.wikipedia.org/wiki/Wide_area_network
+  abbr: WAN
 
 ISM Radio Bands:
   description: The Industrial, Scientific, and Medical frequency bands, most commonly used for low-power and short range telecommunications, such as WiFi, Bluetooth, Zigbee, wireless telephones, RFID, and NFC
@@ -76,13 +104,15 @@ Spreading Factor:
   description: Making the spreading factor 1 step lower (from SF10 to SF9) allows you to send 2x more bytes in the same time. Lowering the spreading factor makes it more difficult for the gateway to receive a transmission, as it will be more sensitive to noise.
   link: https://www.thethingsnetwork.org/docs/lorawan/modulation-data-rate.html
 
-ADR, Adaptive Data Rate:
+Adaptive Data Rate:
   description: A mechanism for optimizing data rates, airtime and energy consumption in the network.
   link: https://www.thethingsnetwork.org/docs/lorawan/adaptive-data-rate.html
+  abbr: ADR
 
-SNR, Signal to noise ratio:
+Signal to noise ratio:
   description: A measure of signal strength.
   link: https://en.wikipedia.org/wiki/Signal-to-noise_ratio
+  abbr: SNR
 
 Classes:
   description: The LoRaWAN specification defines three device types. All LoRaWAN devices must implement Class A, whereas Class B and Class C are extensions to the specification of Class A devices.
@@ -103,34 +133,50 @@ Class C:
 Device ID:
   description: A unique, human-readable identifier for your device.
 
-DevEUI, Device EUI:
+Device EUI:
   description: A 64 bit extended unique identifier for your device. This is programmed by the manufacturer and should not be changed.
   link: https://www.thethingsnetwork.org/docs/lorawan/addressing.html
+  abbr: DevEUI
 
 Device Address:
   description: A 32 bit non-unique identifier, assigned by the Network Server during device activation.
   link: https://www.thethingsnetwork.org/docs/lorawan/addressing.html
 
-AppID, Application ID:
+
+Application ID:
   description:  A unique, human-readable identifier for your application.
+  abbr: AppID
 
-Application EUI, Join EUI:
-  description: The Join EUI (formerly called App EUI) is a 64 bit extended unique identifier used to identify the join server during activation. This should be provided by the device manufacturer for pre-provisioned devices, or by the owner of the join server you will use.
+Join EUI:
+  description: The Join EUI (formerly called Application EUI) is a 64 bit extended unique identifier used to identify the join server during activation. This should be provided by the device manufacturer for pre-provisioned devices, or by the owner of the join server you will use.
   link: https://www.thethingsnetwork.org/docs/lorawan/addressing.html
+  alt: 
+    - Application EUI
+  abbr: JoinEUI
 
-AppSwKey, App Session Key:
+Application EUI:
+  description: In LoRaWAN specifications prior to 1.1, Join EUI was called Application EUI. See Join EUI
+  link: https://www.thethingsnetwork.org/docs/lorawan/addressing.html
+  abbr: AppEUI
+
+App Session Key:
   description: After activation, this encryption key is used to secure messages which carry a payload.
+  abbr: AppSKey
 
-NwSwKey, Network Session Key:
+Network Session Key:
   description: After activation, this encryption key is used to secure messages which do not carry a payload.
+  abbr: NwSwKey
 
-AppKey, Application Key:
+Application Key:
   description: A device specific encryption key used during OTAA to generate NwkSKey and AppSKey. This is usually pre provisioned by the device manufacturer, but can also be created by the user.
+  abbr: AppKey
 
-OTAA, Over the Air Activation:
+Over the Air Activation:
   description: The preferred method to join a LoRaWAN network, offering more flexibility, security, and scalability than ABP.
   link: https://www.thethingsnetwork.org/docs/devices/bestpractices.html
+  abbr: OTAA
 
-ABP, Activation by Personalisation:
+Activation by Personalisation:
   description: Manually provisioning device keys to join a LoRaWAN network. Less flexible, less secure, and less scalable than OTAA, but sometimes useful during demos, to avoid waiting for a downlink window to join a network.
   link: https://www.thethingsnetwork.org/docs/devices/bestpractices.html
+  abbr: ABP
