--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.12.11",
     "react-intl": "^3.1.5",
+    "react-leaflet": "^2.6.3",
     "react-paginate": "^5.2.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
