--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
       "^\\@ttn-lw(.*)": "<rootDir>/pkg/webui$1",
       "^\\@console(.*)": "<rootDir>/pkg/webui/console$1",
       "^\\@oauth(.*)": "<rootDir>/pkg/webui/oauth$1",
-      "^\\@assets(.*)": "<rootDir>/pkg/webuiassets$1"
+      "^\\@assets(.*)": "<rootDir>/pkg/webui/assets$1"
     }
   },
   "eslintConfig": {
