--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "clipboard": "^2.0.4",
     "connected-react-router": "^6.5.2",
     "deep-diff": "^1.0.2",
+    "error-stack-parser": "^2.0.6",
     "focus-visible": "^4.1.4",
     "formik": "^1.5.4",
     "history": "^4.9.0",
