doc: Add intercom

--- a/doc/config/_default/config.toml
+++ b/doc/config/_default/config.toml
@@ -27,7 +27,10 @@ pygmentsUseClasses = true
   keywords = []
   github_repository = "https://github.com/TheThingsNetwork/lorawan-stack"
   github_repository_edit = "https://github.com/TheThingsNetwork/lorawan-stack/edit/master/doc/content"
-  version = "v3.8.4"
+  version = "v3.8.2"
+  [params.intercom]
+    enabled = false
+    appid = ""
 
 [markup]
   [markup.goldmark]
