--- a/.github/workflows/pr-labels.yml
+++ b/.github/workflows/pr-labels.yml
@@ -7,5 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/labeler@v2
+      if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
       with:
         repo-token: '${{ secrets.GITHUB_TOKEN }}'
