dev: Use separate configuration for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
 
   stack:
     image: thethingsnetwork/lorawan-stack
-    entrypoint: ttn-lw-stack -c /config/ttn-lw-stack.yml
+    entrypoint: ttn-lw-stack -c /config/ttn-lw-stack-docker.yml
     command: start
     restart: unless-stopped
     depends_on:
