--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime-corejs2": "^7.4.3",
+    "@cypress/code-coverage": "^3.8.1",
     "@hot-loader/react-dom": "^16.9.0-4.12.11",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-console": "^1.2.1",
@@ -28,6 +29,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.2.6",
     "babel-loader": "^8.0.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-intl": "^2.3.1",
     "babel-plugin-react-intl-auto": "^1.0.0",
@@ -36,7 +38,7 @@
     "copy-webpack-plugin": "^5.1.0",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^2.1.1",
-    "cypress": "4.6.0",
+    "cypress": "^4.11.0",
     "enzyme": "~3.6.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
@@ -122,7 +124,7 @@
     "yup": "^0.29.1"
   },
   "resolutions": {
-    "cypress": "4.6.0"
+    "cypress": "4.11.0"
   },
   "babel": {
     "extends": "./config/.babelrc"
@@ -153,5 +155,14 @@
   "eslintConfig": {
     "extends": "./config/eslintrc.yaml"
   },
-  "prettier": "./config/.prettierrc.js"
+  "prettier": "./config/.prettierrc.js",
+  "nyc": {
+    "report-dir": "coverage/cypress",
+    "reporter": [
+      "json"
+    ],
+    "include": [
+      "pkg/webui/**/*.js"
+    ]
+  }
 }
