--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -46,6 +46,9 @@ jobs:
       run: tools/bin/mage docs:build
       env:
         HUGO_BASE_URL: https://thethingsstack.io/
+        HUGO_PARAMS_SEARCH_APIKEY: ${{ secrets.HUGO_PARAMS_SEARCH_APIKEY }}
+        HUGO_PARAMS_SEARCH_ENABLED: true
+        HUGO_PARAMS_SEARCH_INDEX: thethingsstack
     - name: Deploy documentation to Github pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
@@ -119,6 +122,9 @@ jobs:
         version: ${{ steps.goreleaser_version.outputs.value }}
         args: release --release-notes /tmp/release-notes.md
       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         DOCKER_IMAGE: thethingsnetwork/lorawan-stack
         DOCKER_IMAGE_DEV: thethingsnetwork/lorawan-stack-dev
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
