--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -13,72 +13,6 @@ env:
   NODE_ENV: production
 
 jobs:
-  documentation:
-    name: Documentation
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Check out documentation
-      uses: actions/checkout@v2
-      with:
-        ref: gh-pages
-        path: doc/public
-    - name: Set up Node
-      uses: actions/setup-node@v2-beta
-      with:
-        node-version: '~14'
-    - name: Get Yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - name: Initialize Yarn module cache
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: '~1.14'
-    - name: Initialize Go module cache
-      uses: actions/cache@v2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
-    - name: Download Go tool dependencies
-      run: |
-        cd tools
-        go mod download
-    - name: Initialize tool binary cache
-      uses: actions/cache@v2
-      with:
-        path: tools/bin
-        key: ${{ runner.os }}-tools-${{ hashFiles('tools/**') }}
-    - name: Make Mage
-      run: make tools/bin/mage
-    - name: Install JS SDK dependencies
-      run: tools/bin/mage jsSDK:deps
-    - name: Build JS SDK
-      run: tools/bin/mage jsSDK:clean jsSDK:build
-    - name: Install JS dependencies
-      run: tools/bin/mage js:deps
-    - name: File versioning
-      run: tools/bin/mage version:files
-    - name: Check for diff
-      run: tools/bin/mage git:diff
-    - name: Install documentation dependencies
-      run: tools/bin/mage docs:deps
-    - name: Build documentation
-      run: tools/bin/mage docs:build
-      env:
-        HUGO_BASE_URL: https://thethingsstack.io/
-
   release:
     name: Release
     runs-on: ubuntu-18.04
@@ -140,6 +74,15 @@ jobs:
       run: tools/bin/mage js:deps
     - name: Build frontend
       run: tools/bin/mage js:clean js:build
+    - name: Install documentation dependencies
+      run: tools/bin/mage docs:deps
+    - name: Build documentation
+      run: tools/bin/mage docs:build
+      env:
+        HUGO_BASE_URL: https://thethingsstack.io/
+        HUGO_PARAMS_SEARCH_APIKEY: ${{ secrets.HUGO_PARAMS_SEARCH_APIKEY }}
+        HUGO_PARAMS_SEARCH_ENABLED: true
+        HUGO_PARAMS_SEARCH_INDEX: thethingsstack
     - name: File versioning
       run: tools/bin/mage version:files
     - name: Check for diff
