--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -97,6 +97,15 @@ jobs:
       run: tools/bin/mage js:deps
     - name: Build frontend
       run: tools/bin/mage js:clean js:build
+    - name: Install documentation dependencies
+      run: tools/bin/mage docs:deps
+    - name: Build documentation
+      run: tools/bin/mage docs:build
+      env:
+        HUGO_BASE_URL: https://thethingsstack.io/
+        HUGO_PARAMS_SEARCH_APIKEY: ${{ secrets.HUGO_PARAMS_SEARCH_APIKEY }}
+        HUGO_PARAMS_SEARCH_ENABLED: true
+        HUGO_PARAMS_SEARCH_INDEX: thethingsstack
     - name: File versioning
       run: tools/bin/mage version:files
     - name: Check for diff
