doc: Update gh pages config

--- a/doc/config/gh-pages/config.toml
+++ b/doc/config/gh-pages/config.toml
@@ -3,3 +3,11 @@
     enabled = false
     apikey = ""
     index = ""
+  [params.intercom]
+    enabled = false
+    appid = ""
+  [params.feedback]
+    enabled = false
+  [params.analytics]
+    enabled = false
+    trackingid = ""
