--- a/doc/themes/the-things-stack/package.json
+++ b/doc/themes/the-things-stack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hugo-theme-the-things-stack",
-  "version": "3.8.5",
+  "version": "3.9.0-rc1",
   "private": true,
   "description": "Hugo Theme for The Things Stack",
   "dependencies": {
