--- a/package.json
+++ b/package.json
@@ -114,6 +114,8 @@
     "react-select": "^3.1.0",
     "react-text-mask": "^5.4.3",
     "react-toastify": "^4.5.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-logic": "^2.1.1",
