api: Allow empty MIC

--- a/doc/data/api/ttn.lorawan.v3/messages.yml
+++ b/doc/data/api/ttn.lorawan.v3/messages.yml
@@ -6228,7 +6228,7 @@ Message:
   - name: mic
     type: bytes
     rules:
-      len: 4
+      max_len: 4
     default: ""
   - name: mac_payload
     message:
