--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -62,6 +62,7 @@ jobs:
       run: tools/bin/mage jsSDK:clean jsSDK:build
     - name: Install JS dependencies
       run: tools/bin/mage js:deps
+      timeout-minutes: 5
     - name: Generate JS translations
       run: tools/bin/mage js:translations js:backendTranslations
     - name: Lint JS SDK code
@@ -109,6 +110,7 @@ jobs:
       run: tools/bin/mage jsSDK:clean jsSDK:build
     - name: Install JS dependencies
       run: tools/bin/mage js:deps
+      timeout-minutes: 5
     - name: Build frontend
       run: tools/bin/mage js:clean js:build
     - name: Test JS SDK code
