dev: Use yarn cache

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -17,6 +17,7 @@ jobs:
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(npx yarn cache dir)"
     - name: Initialize Yarn module cache
+      id: yarn-cache
       uses: actions/cache@v2
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -51,6 +52,7 @@ jobs:
       # https://github.com/TheThingsNetwork/lorawan-stack/issues/2723
       continue-on-error: true
     - name: Install JS dependencies
+      if: steps.yarn-cache.outputs.cache-hit != 'true'
       run: tools/bin/mage js:deps
       timeout-minutes: 5
     - name: Check headers
