--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -28,6 +28,7 @@ jobs:
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(npx yarn cache dir)"
     - name: Initialize Yarn module cache
+      id: yarn-cache
       uses: actions/cache@v2
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -63,6 +64,7 @@ jobs:
     - name: Build JS SDK
       run: tools/bin/mage jsSDK:clean jsSDK:build
     - name: Install JS dependencies
+      if: steps.yarn-cache.outputs.cache-hit != 'true'
       run: tools/bin/mage js:deps
       timeout-minutes: 5
     - name: Generate JS translations
@@ -84,6 +86,17 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: '14'
+    - name: Get Yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(npx yarn cache dir)"
+    - name: Initialize Yarn module cache
+      id: yarn-cache
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
@@ -117,6 +130,7 @@ jobs:
     - name: Build JS SDK
       run: tools/bin/mage jsSDK:clean jsSDK:build
     - name: Install JS dependencies
+      if: steps.yarn-cache.outputs.cache-hit != 'true'
       run: tools/bin/mage js:deps
       timeout-minutes: 5
     - name: Build frontend
