--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "redux-sentry-middleware": "^0.1.8",
     "scroll-into-view-if-needed": "^2.2.20",
     "ttn-lw": "file:sdk/js",
+    "unicode-properties": "^1.3.1",
     "url-polyfill": "^1.1.5",
     "url-template": "^2.0.8",
     "yup": "^0.29.1"
