--- a/.goreleaser.release.yml
+++ b/.goreleaser.release.yml
@@ -206,19 +206,10 @@ dockers:
       - ttn-lw-cli
       - ttn-lw-stack
     image_templates:
-      - '{{ or (index .Env "DOCKER_IMAGE") "lorawan-stack" }}:{{ .Major }}.{{ .Minor }}'
-      - '{{ or (index .Env "DOCKER_IMAGE") "lorawan-stack" }}:{{ .Version }}'
+      - 'thethingsnetwork/lorawan-stack:{{ .Major }}.{{ .Minor }}'
+      - 'thethingsnetwork/lorawan-stack:{{ .Version }}'
+      - 'ghcr.io/thethingsnetwork/lorawan-stack:{{ .Major }}.{{ .Minor }}'
+      - 'ghcr.io/thethingsnetwork/lorawan-stack:{{ .Version }}'
     skip_push: auto
-    extra_files:
-      - public
-
-  - goos: linux
-    goarch: amd64
-    dockerfile: Dockerfile
-    binaries:
-      - ttn-lw-cli
-      - ttn-lw-stack
-    image_templates:
-      - '{{ or (index .Env "DOCKER_IMAGE_DEV") "lorawan-stack-dev" }}:{{ .FullCommit }}'
     extra_files:
       - public
