--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
+    "react-string-replace": "^0.4.4",
     "react-text-mask": "^5.4.3",
     "react-toastify": "^6.0.9",
     "react-virtualized-auto-sizer": "^1.0.2",
