--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -75,7 +75,7 @@ jobs:
       with:
         result-encoding: string
         script: |
-          const tag = context.ref.slice('refs/rev/v'.length);
+          const tag = context.ref.slice('refs/tags/v'.length);
           const tagParts = tag.split('.');
           require('fs').writeFileSync('/tmp/release-notes.md', `[Release notes](https://github.com/TheThingsNetwork/lorawan-stack/blob/${tag}/CHANGELOG.md#${tagParts[0]}${tagParts[1]}${tagParts[2]}---${{ steps.date.outputs.value }})`);
     - name: Determine Goreleaser version
