ci: Make submodules work in CI snapshot and release builds

--- a/.goreleaser.release.yml
+++ b/.goreleaser.release.yml
@@ -212,4 +212,5 @@ dockers:
       - 'ghcr.io/thethingsnetwork/lorawan-stack:{{ .Version }}'
     skip_push: auto
     extra_files:
+      - data
       - public
