ci: Upload screenshots for failed tests as artifacts

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -69,3 +69,9 @@ jobs:
         with:
           name: logs
           path: .cache/devStack.log
+      - name: Upload screenshots for failed tests
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
