ci: Add CHANGELOG to S3 Releases

--- a/.goreleaser.release.yml
+++ b/.goreleaser.release.yml
@@ -197,6 +197,8 @@ blobs:
     - stack
     - cli
     folder: "{{ .Version }}"
+    extra_files:
+    - glob: ./CHANGELOG.md
 
 dockers:
   - goos: linux
